<resources>
    <string name="app_name">Movie Head</string>
    <string name="made_with_by_shabaj_dev">Made with ♥ by SHabaj-dev</string>
    <string name="powered_by">Powered by</string>
    <string name="moviesdb_org">moviesdb.org</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_popular">Popular</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="movie_name">Movie Name</string>
    <string name="start_icon">Start Icon</string>
    <string name="language_icon">Language Icon</string>
    <string name="release_data_icon">Release Data Icon</string>
    <string name="ratings">Ratings</string>
    <string name="language">Language</string>
    <string name="_12_10_1999">12/10/1999</string>
    <string name="_1">1</string>
    <string name="overview">overview .........</string>
    <string name="overview_">Overview :</string>
    <string name="_130_000">130,000</string>
    <string name="revenue">Revenue:</string>
    <string name="_130_000_">130,000</string>
    <string name="budget">Budget:</string>
    <string name="_2_3_hr">2.3 hr</string>
    <string name="runtime">Runtime:</string>
    <string name="_8">8</string>
    <string name="rating">Rating:</string>
    <string name="_2019">2019</string>
    <string name="releasedate">ReleaseDate :</string>
    <string name="movie_info">Movie Info :</string>
    <string name="sub_title">sub title</string>
    <string name="movie">movie</string>
</resources>