<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_popular">

    <fragment
        android:id="@+id/navigation_popular"
        android:name="com.sbz.moviehead.ui.popular.PopularFragment"
        android:label="@string/title_popular"
        tools:layout="@layout/fragment_popular" />

    <fragment
        android:id="@+id/navigation_top_rated"
        android:name="com.sbz.moviehead.ui.topRated.TopRatedFragment"
        android:label="@string/title_top_rated"
        tools:layout="@layout/fragment_top_rated" />

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.sbz.moviehead.ui.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" />
</navigation>