<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_dataRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_50dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:background="@drawable/bg_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="150dp" />

        <TextView
            android:id="@+id/tv_movieName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_15dp"
            android:padding="@dimen/_5dp"
            android:text="@string/movie_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/gl"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/iv_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginTop="@dimen/_5dp"
            android:contentDescription="@string/start_icon"
            android:src="@drawable/ic_star"
            app:layout_constraintStart_toStartOf="@+id/gl"
            app:layout_constraintTop_toBottomOf="@+id/tv_movieName" />

        <ImageView
            android:id="@+id/iv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginTop="@dimen/_5dp"
            android:contentDescription="@string/language_icon"
            android:src="@drawable/ic_language"
            app:layout_constraintStart_toStartOf="@+id/gl"
            app:layout_constraintTop_toBottomOf="@+id/iv_star" />

        <ImageView
            android:id="@+id/iv_releaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:contentDescription="@string/release_data_icon"
            android:src="@drawable/ic_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/gl"
            app:layout_constraintTop_toBottomOf="@+id/iv_language" />


        <TextView
            android:id="@+id/tv_movieRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:text="@string/ratings"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_star"
            app:layout_constraintStart_toEndOf="@+id/iv_star"
            app:layout_constraintTop_toTopOf="@id/iv_star" />

        <TextView
            android:id="@+id/tv_movieLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:text="@string/language"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_language"
            app:layout_constraintStart_toEndOf="@id/iv_language"
            app:layout_constraintTop_toTopOf="@id/iv_language" />

        <TextView
            android:id="@+id/tv_releaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:text="@string/_12_10_1999"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_releaseDate"
            app:layout_constraintStart_toEndOf="@id/iv_releaseDate"
            app:layout_constraintTop_toTopOf="@id/iv_releaseDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="@id/cl_dataRoot"
        app:layout_constraintStart_toStartOf="@id/cl_dataRoot">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_moviePoster"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:background="@color/white"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ImageViewShape"
            app:srcCompat="@drawable/ic_launcher_background" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>